--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.1.0",
     "gh-pages": "^3.1.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
     "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.1"
   },
