--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.1.0",
     "gh-pages": "^3.1.0",
+    "material-design-icons": "^3.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
