--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcoin-or-ipo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nathanjreidy.github.io/react-project-bitcoin-or-ipo/",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
