--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-twitter-widgets": "^1.10.0",
     "react-vis": "^1.11.7",
     "save-dev": "0.0.1-security",
     "web-vitals": "^1.1.1"
